@@ -1,5 +1,5 @@
 /*
-    Copyright (C) 2012-2014 Carl Hetherington <cth@carlh.net>
+    Copyright (C) 2015 Carl Hetherington <cth@carlh.net>
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
@@ -17,26 +17,29 @@
 
 */
 
-#include "table_dialog.h"
-#include "editable_list.h"
 #include "email_dialog.h"
-#include <wx/wx.h>
-#include <list>
-#include <vector>
+#include "wx_util.h"
 
-class CinemaDialog : public wxDialog
+using std::string;
+using boost::shared_ptr;
+
+EmailDialog::EmailDialog (wxWindow* parent)
+	: TableDialog (parent, _("Email address"), 2, 1, true)
 {
-public:
-	CinemaDialog (wxWindow *, std::string, std::string name = "", std::list<std::string> emails = std::list<std::string> ());
+	add (_("Email address"), true);
+	_email = add (new wxTextCtrl (this, wxID_ANY, wxT (""), wxDefaultPosition, wxSize (400, -1)));
 
-	std::string name () const;
-	std::list<std::string> emails () const;
+	layout ();
+}
 
-private:
-	std::vector<std::string> get_emails () const;
-	void set_emails (std::vector<std::string>);
+void
+EmailDialog::set (string address)
+{
+	_email->SetValue (std_to_wx (address));
+}
 
-	wxTextCtrl* _name;
-	EditableList<std::string, EmailDialog>* _email_list;
-	std::vector<std::string> _emails;
-};
+string
+EmailDialog::get () const
+{
+	return wx_to_std (_email->GetValue ());
+}
