@@ -39,6 +39,7 @@ sources = """
           content_properties_dialog.cc
           content_sub_panel.cc
           dcp_panel.cc
+          email_dialog.cc
           image_sequence_dialog.cc
           isdcf_metadata_dialog.cc
           dir_picker_ctrl.cc
