@@ -1,3 +1,7 @@
+2015-11-13  c.hetherington  <cth@carlh.net>
+
+	* Allow multiple recipients of KDM emails (#745).
+
 2015-11-12  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.5.2 released.
